--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -94,8 +94,8 @@ items:
       href: how-to-transform-data.md
     - name: Skrivdata
       href: how-to-write-data.md
-  - name: Åtkomst till data
-    displayName: blob get fileshare
+  - name: Hämta data i datalagret
+    displayName: blob get fileshare access storage
     href: how-to-access-data.md
   - name: Inlärningsmodeller
     items:
@@ -111,7 +111,7 @@ items:
     - name: Justering av hyperparametrar
       displayName: parameter
       href: how-to-tune-hyperparameters.md
-    - name: Spåra experiment och mått
+    - name: Loggmått för träningskörningar
       href: how-to-track-experiments.md
   - name: Azure-maskininlärning
     displayName: automl, auto ml
@@ -193,9 +193,9 @@ items:
   - name: Jämför våra ML-produkter
     href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
     maintainContext: true
-ms.openlocfilehash: 43d3db426fa96fca9a35250a57725cc7513a05ae
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
+ms.openlocfilehash: c022e3607466db482e37f1ace283577dad6a37b8
+ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "58181018"
+ms.lasthandoff: 03/21/2019
+ms.locfileid: "58338538"
