--- a/articles/active-directory/b2b/index.yml
+++ b/articles/active-directory/b2b/index.yml
@@ -1,15 +1,15 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 3ef506da391ece8f4da79283e09cd137ebec5b23
-ms.sourcegitcommit: ab6fa92977255c5ecbe8a53cac61c2cd2a11601f
+ms.openlocfilehash: 3399ed71635434bc38d0c989118afb68de9fbd4c
+ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/20/2019
-ms.locfileid: "58294679"
+ms.lasthandoff: 03/21/2019
+ms.locfileid: "58338504"
 documentType: LandingData
 title: Dokumentation om Azure Active Directory B2B
 metadata:
   document_id: 
-  title: Dokumentation om Azure Active Directory B2B | Microsoft Docs
+  title: Dokumentation om Azure Active Directory B2B – Azure Active Directory | Microsoft Docs
   description: Använd våra självstudier, snabbstarter och instruktioner för att lära dig hur du använder B2B-gästanvändaråtkomst för att dela och samarbeta med externa partner.
   services: active-directory
   ms.subservice: authentication
