--- a/articles/active-directory/manage-apps/index.yml
+++ b/articles/active-directory/manage-apps/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 584407e7c6f2be872c5914d35c62c76f96bc7b3c
-ms.sourcegitcommit: ab6fa92977255c5ecbe8a53cac61c2cd2a11601f
+ms.openlocfilehash: 3d7b9dff034aca6c7602ea72fadfcdc53b11fe15
+ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/20/2019
-ms.locfileid: "58295359"
+ms.lasthandoff: 03/21/2019
+ms.locfileid: "58335886"
 documentType: LandingData
 title: Dokumentation om programhantering
 metadata:
-  title: Dokumentation om Azure Active Directory-programhantering
+  title: Dokumentation om Azure Active Directory-programhantering – Azure Active Directory
   description: Lär dig hur du hanterar och distribuerar program med Azure Active Directory.
   services: active-directory
   author: barbkess
