--- a/articles/active-directory/user-help/toc.yml
+++ b/articles/active-directory/user-help/toc.yml
@@ -94,14 +94,20 @@ items:
 - name: Hjälp om portalen Mina appar
   items:
   - name: Översikt
-    href: user-help-my-apps-overview.md
-  - name: Vad är portalen Mina appar?
-    href: active-directory-saas-access-panel-introduction.md
+    href: my-apps-portal-end-user-overview.md
+  - name: Komma åt och använda portalen Mina appar
+    href: my-apps-portal-end-user-access.md
+  - name: Uppdatera din profil- och kontoinformation
+    href: my-apps-portal-end-user-update-profile.md
+  - name: Uppdatera din gruppinformation
+    href: my-apps-portal-end-user-groups.md
+  - name: Utföra egna åtkomstgranskningar
+    href: my-apps-portal-end-user-access-reviews.md
   - name: Felsöka problem
-    href: active-directory-saas-access-panel-user-help.md
-ms.openlocfilehash: ce88ac8f7ca81009f7c28b08408723ac5161eda1
-ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
+    href: my-apps-portal-end-user-troubleshoot.md
+ms.openlocfilehash: be7c20053ab6ee3a18f81aec9dc973a3032aa5c6
+ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57340069"
+ms.lasthandoff: 03/21/2019
+ms.locfileid: "58339560"
