--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -62,10 +62,10 @@ items:
       href: custom-error.md
   - name: SSL
     items:
-    - name: Översikt över SSL-princip
-      href: application-gateway-ssl-policy-overview.md
     - name: SSL-avslut och slutpunkt till slutpunkt över SSL
       href: ssl-overview.md
+    - name: Översikt över SSL-princip
+      href: application-gateway-ssl-policy-overview.md
   - name: Brandvägg för webbaserade program
     items:
     - name: Brandvägg för webbaserade program
@@ -88,7 +88,7 @@ items:
     href: application-gateway-faq.md
 - name: Instruktionsguider
   items:
-  - name: Hantera webbtrafik
+  - name: Agera värd åt en enskild webbplats
     items:
     - name: Azure Portal
       href: tutorial-manage-web-traffic-powershell.md
@@ -100,22 +100,30 @@ items:
       href: configure-application-gateway-with-private-frontend-ip.md
     - name: Azure PowerShell
       href: application-gateway-ilb-arm.md
-  - name: Konfigurera SSL-avslutning
+  - name: Konfigurera SSL
     items:
-    - name: SSL-avslutning – portalen
-      href: create-ssl-portal.md
-    - name: SSL-avslutning – PowerShell
-      href: tutorial-ssl-powershell.md
-    - name: Slutpunkt till slutpunkt för SSL – portalen
-      href: end-to-end-ssl-portal.md
-    - name: Slutpunkt till slutpunkt för SSL – PowerShell
-      href: application-gateway-end-to-end-ssl-powershell.md
-    - name: Skapa certifikat för serverdel för lista över tillåtna
-      href: certificates-for-backend-authentication.md
-    - name: Förnya certifikat
-      href: renew-certificates.md
-    - name: Konfigurera SSL-princip
-      href: application-gateway-configure-ssl-policy-powershell.md
+    - name: SSL-avslutning
+      items:
+      - name: SSL-avslutning – portalen
+        href: create-ssl-portal.md
+      - name: SSL-avslutning – PowerShell
+        href: tutorial-ssl-powershell.md
+    - name: SSL från slutpunkt till slutpunkt
+      items:
+      - name: Slutpunkt till slutpunkt för SSL – portalen
+        href: end-to-end-ssl-portal.md
+      - name: Slutpunkt till slutpunkt för SSL – PowerShell
+        href: application-gateway-end-to-end-ssl-powershell.md
+    - name: Hantera certifikat
+      items:
+      - name: Skapa certifikat för serverdel för lista över tillåtna
+        href: certificates-for-backend-authentication.md
+      - name: Förnya certifikat
+        href: renew-certificates.md
+    - name: SSL-princip
+      items:
+      - name: Konfigurera SSL-princip
+        href: application-gateway-configure-ssl-policy-powershell.md
   - name: Konfigurera brandväggen för webbappar
     items:
     - name: Azure Portal
@@ -176,7 +184,7 @@ items:
       href: configure-web-app-portal.md
     - name: Azure PowerShell
       href: create-web-app.md
-  - name: Anpassade avsökningar
+  - name: Konfigurera anpassade avsökningar
     items:
     - name: Portalen
       href: application-gateway-create-probe-portal.md
@@ -228,9 +236,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Stack Overflow
     href: https://stackoverflow.com/questions/tagged/azure-application-gateway
-ms.openlocfilehash: 68264afadd3d05e4d11c6b4b98cd7375886e4d20
-ms.sourcegitcommit: 8a59b051b283a72765e7d9ac9dd0586f37018d30
+ms.openlocfilehash: cd08a1ac880bb4242f4f57882d0e45133cf26748
+ms.sourcegitcommit: 87bd7bf35c469f84d6ca6599ac3f5ea5545159c9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/20/2019
-ms.locfileid: "58286964"
+ms.lasthandoff: 03/22/2019
+ms.locfileid: "58350768"
