--- a/articles/databox-online/index.yml
+++ b/articles/databox-online/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: cd544367113986b3a3959c2bf50fac80a8b36bc5
-ms.sourcegitcommit: 3a02e0e8759ab3835d7c58479a05d7907a719d9c
+ms.openlocfilehash: 44c7f6d32737fe83e80a2f2df15f0ae078a5849e
+ms.sourcegitcommit: 81fa781f907405c215073c4e0441f9952fe80fe5
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/13/2018
-ms.locfileid: "49309084"
+ms.lasthandoff: 03/25/2019
+ms.locfileid: "58400289"
 documentType: LandingData
 title: Azure Data Box-dokumentation – överföring online
 metadata:
@@ -16,7 +16,7 @@ metadata:
   ms.service: databox
   ms.subservice: edge
   ms.topic: landing-page
-  ms.date: 10/12/2018
+  ms.date: 03/22/2019
   ms.author: alkohli
 abstract:
   description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för dataöverföringar över nätverket med höga prestanda.<p>Välj Data Box Gateway<SUP>förhandsversion</SUP> för att skicka data för molnarkivering, haveriberedskap, eller för att bearbeta data i molnskala.  Använd Data Box Edge<SUP>förhandsversion</SUP> för att filtrera, analysera och transformera data när de flyttas till Azure.</p><p>Lär dig hur du kan använda Data Box Gateway och Data Box Edge för nätverksbaserad överföring med våra självstudier.</p>
@@ -24,7 +24,7 @@ sections:
 - title: Självstudier
   items:
   - type: paragraph
-    text: <b>För Data Box Gateway<SUP>förhandsversion</SUP></b>
+    text: <b>För Data Box Gateway</b>
   - type: list
     style: ordered
     items:
@@ -34,7 +34,7 @@ sections:
     - html: <a href="data-box-gateway-deploy-connect-setup-activate">Ansluta, konfigurera och aktivera Azure Data Box Gateway</a>
     - html: <a href="data-box-gateway-deploy-add-shares">Överföra data med Azure Data Box Gateway</a>
   - type: paragraph
-    text: <b>För Data Box Edge<SUP>förhandsversion</SUP></b>
+    text: <b>För Data Box Edge</b>
   - type: list
     style: ordered
     items:
