--- a/articles/media-services/latest/index.yml
+++ b/articles/media-services/latest/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: fdda67921db38b912679d27bf5a8c897775ad82b
-ms.sourcegitcommit: 78ec955e8cdbfa01b0fa9bdd99659b3f64932bba
+ms.openlocfilehash: d4e80fd18de40c7df806f0a72612cec7bb71e2d2
+ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/10/2018
-ms.locfileid: "53137998"
+ms.lasthandoff: 03/21/2019
+ms.locfileid: "58339189"
 documentType: LandingData
 title: Dokumentation om Azure Media Services v3
 metadata:
@@ -18,11 +18,27 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 10-15-2018
+  ms.date: 03/20/2019
   ms.author: juliako
 abstract:
   description: Lär dig mer om att strömma videor på begäran, sända live och analysera dina videoklipp med Media Services v3. Självstudier, API-referenser och annan dokumentation visar hur du säkert levererar ljud- eller videoströmmar på begäran och live, som kan skalas till miljontals användare. <br/> SDK:erna är baserade på <a href="https://aka.ms/ams-v3-rest-sdk">Media Services v3 OpenAPI-specifikation (Swagger)</a>.
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 2
+    items:
+    - image:
+        src: 
+      html: <p>Läs mer om grundläggande koncept för Media Services.</p>
+      href: /azure/media-services/latest/concepts-overview/
+      title: Läs mer om koncept
+    - image:
+        src: 
+      html: <p>För närvarande kan du inte hantera v3-resurser med Azure-portalen. Använd REST-API, CLI eller en av SDK:erna som stöds.</p>
+      href: /azure/media-services/latest/developers-guide/
+      title: Utveckla med API för v3
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
