--- a/articles/virtual-desktop/index.yml
+++ b/articles/virtual-desktop/index.yml
@@ -1,17 +1,17 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 06b95c24914574a2aea59c6c597e3d9b3d5097cc
-ms.sourcegitcommit: 90dcc3d427af1264d6ac2b9bde6cdad364ceefcc
+ms.openlocfilehash: b9f4cd78288d1b9868a823c5e0ccd0b68b324229
+ms.sourcegitcommit: 81fa781f907405c215073c4e0441f9952fe80fe5
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58318743"
+ms.lasthandoff: 03/25/2019
+ms.locfileid: "58400251"
 documentType: LandingData
-title: Dokumentation om Windows Virtual Desktop
+title: Dokumentation om förhandsversionen av Windows Virtual Desktop
 metadata:
-  title: Dokumentation om Windows Virtual Desktop – Självstudier, snabbstarter, API-referenser | Microsoft Docs
-  description: Windows Virtual Desktop för Azure är en Windows 10 Enterprise-upplevelse för flera användare som är virtualiserad i molnet.
+  title: Dokumentation om förhandsversionen av Windows Virtual Desktop – självstudier, snabbstarter, API-referenser | Microsoft Docs
+  description: Förhandsversionen av Windows Virtual Desktop för Azure är en Windows 10 Enterprise-upplevelse för flera användare som är virtualiserad i molnet.
   author: Heidilohr
-  manager: dansimp
+  manager: daveba
   ms.service: virtual-desktop
   services: virtual-desktop
   ms.topic: landing-page
@@ -23,11 +23,11 @@ sections:
 - title: Översikt
   items:
   - type: paragraph
-    text: Läs mer om Windows Virtual Desktop och hur den används. Med hjälp av självstudier, instruktioner, referensinnehåll och mer får du lära dig att konfigurera värdpooler och klientorganisationer samt tilldela roller till användare i din Windows Virtual Desktop-miljö.
+    text: Läs mer om förhandsversionen av Windows Virtual Desktop och hur den används. Med hjälp av självstudier, instruktioner, referensinnehåll och mer får du lära dig att konfigurera värdpooler och klientorganisationer samt tilldela roller till användare i din Windows Virtual Desktop-miljö.
   - type: list
     style: unordered
     items:
-    - html: <a href="/azure/virtual-desktop/overview">Vad är Windows Virtual Desktop? (Förhandsversion)</a>
+    - html: <a href="/azure/virtual-desktop/overview">Vad är förhandsversionen av Windows Virtual Desktop?</a>
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
@@ -44,4 +44,4 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="/powershell/windows-virtual-desktop/overview">PowerShell (förhandsversion)</a>
+    - html: <a href="/powershell/windows-virtual-desktop/overview">PowerShell</a>
