--- a/articles/jenkins/toc.yml
+++ b/articles/jenkins/toc.yml
@@ -8,82 +8,74 @@ items:
 - name: Snabbstarter
   items:
   - name: Skapa en Jenkins-server
-    href: /azure/jenkins/install-jenkins-solution-template
-    maintainContext: true
+    href: install-jenkins-solution-template.md
   expanded: true
 - name: Självstudier
   items:
-  - name: CI/CD till App Service
-    href: /azure/jenkins/tutorial-jenkins-deploy-web-app-azure-app-service
-  - name: CI/CD till Kubernetes
-    href: /azure/aks/jenkins-continuous-deployment
-    maintainContext: true
-  - name: CI/CD till virtuella Linux-datorer
-    href: /azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd
-    maintainContext: true
-  - name: Skapa Azure-resurser i ett pipeline-jobb
-    href: /azure/jenkins/execute-cli-jenkins-pipeline
-  - name: Skala med Azure VM-agenter
-    href: /azure/jenkins/jenkins-azure-vm-agents
-  - name: Skapa med hjälp av Azure Container Instances
-    href: /azure/container-instances/container-instances-jenkins
-    maintainContext: true
-  - name: Distribuera till AKS med hjälp av blått/grönt mönster
-    href: /azure/jenkins/jenkins-aks-blue-green-deployment
-  - name: Distribuera till Azure Functions
-    href: ./jenkins-azure-functions-deploy.md
+  - name: 1. Installera
+    items:
+    - name: Skapa en Jenkins-server
+      href: install-jenkins-solution-template.md
+  - name: 2. Konfigurera
+    items:
+    - name: Skala med Azure VM-agenter
+      href: jenkins-azure-vm-agents.md
+  - name: 3. Implementera CI/CD
+    items:
+    - name: AKS
+      items:
+      - name: CI/CD till Kubernetes
+        href: /azure/aks/jenkins-continuous-deployment
+        maintainContext: true
+      - name: Distribuera till AKS med hjälp av blått/grönt mönster
+        href: jenkins-aks-blue-green-deployment.md
+    - name: App Service
+      items:
+      - name: Skapa Azure-resurser i ett pipeline-jobb
+        href: execute-cli-jenkins-pipeline.md
+      - name: Distribuera en app från GitHub till App Service
+        href: tutorial-jenkins-deploy-web-app-azure-app-service.md
+    - name: Skapa med hjälp av Azure Container Instances
+      href: /azure/container-instances/container-instances-jenkins
+      maintainContext: true
+    - name: Använd Jenkins med Azure DevOps
+      href: /azure/virtual-machines/linux/tutorial-build-deploy-jenkins
+      maintainContext: true
+    - name: Distribuera till Azure Functions
+      href: jenkins-azure-functions-deploy.md
+    - name: Publicera till Azure Storage
+      href: /azure/storage/storage-java-jenkins-continuous-integration-solution
+      maintainContext: true
+    - name: CI/CD till virtuella Linux-datorer
+      href: /azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd
+      maintainContext: true
+    - name: CI/CD till Service Fabric
+      href: /azure/service-fabric/service-fabric-cicd-your-linux-applications-with-jenkins
+      maintainContext: true
 - name: Så här gör du
   items:
-  - name: Säker Jenkins på Azure
-    href: https://jenkins.io/blog/2017/04/20/secure-jenkins-on-azure/
   - name: Använda App Service-pluginprogrammet
     href: deploy-jenkins-app-service-plugin.md
-  - name: Publicera till Azure Storage
-    href: /azure/storage/storage-java-jenkins-continuous-integration-solution
-    maintainContext: true
-  - name: Använd Jenkins med Azure DevOps
-    href: https://www.visualstudio.com/docs/build/apps/jenkins/build-deploy-jenkins
-  - name: Distribuera Service Fabric-appar
-    href: /azure/service-fabric/service-fabric-cicd-your-linux-applications-with-jenkins
-    maintainContext: true
 - name: Exempel
   items:
   - name: Exempeljobb och skript
     href: https://github.com/azure/jenkins
 - name: Resurser
   items:
-  - name: Plugin-program
-    items:
-    - name: Azure App Service-pluginprogram
-      href: https://plugins.jenkins.io/azure-app-service
-    - name: Plugin-program för Azure AD
-      href: https://plugins.jenkins.io/azure-ad
-    - name: Azure Container Agents-pluginprogram
-      href: https://plugins.jenkins.io/azure-container-agents
-    - name: Azure Container Service-pluginprogram
-      href: https://plugins.jenkins.io/azure-acs
-    - name: Azure Credential-pluginprogram
-      href: https://plugins.jenkins.io/azure-credentials
-    - name: Azure Function-pluginprogram
-      href: https://plugins.jenkins.io/azure-function
-    - name: Plugin-program för Azure Service Fabric
-      href: https://plugins.jenkins.io/service-fabric
-    - name: Azure Storage-pluginprogram
-      href: https://plugins.jenkins.io/windows-azure-storage
-    - name: Pluginprogram för Azure VM-agenter
-      href: https://plugins.jenkins.io/azure-vm-agents
-    - name: Plugin-program för Azure VM Scale Sets
-      href: https://plugins.jenkins.io/azure-vmss
+  - name: Jenkins-pluginprogram för Azure
+    href: jenkins-plugins.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
   - name: Jenkins-startsida
     href: https://jenkins.io/
+  - name: Jenkins X-startsida
+    href: https://jenkins-x.io
   - name: Jenkins-arkitektur
     href: /azure/architecture/reference-architectures/jenkins/
     maintainContext: true
-ms.openlocfilehash: 4d6b7848d1eab5da3baa04f72add5f97256498b1
-ms.sourcegitcommit: 1516779f1baffaedcd24c674ccddd3e95de844de
+ms.openlocfilehash: 2cfd843c0a7fc11a98d2450cc5ec499cdc1f580e
+ms.sourcegitcommit: 70550d278cda4355adffe9c66d920919448b0c34
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/26/2019
-ms.locfileid: "56819639"
+ms.lasthandoff: 03/26/2019
+ms.locfileid: "58438688"
