--- a/articles/active-directory/hybrid/TOC.yml
+++ b/articles/active-directory/hybrid/TOC.yml
@@ -251,6 +251,8 @@ items:
       href: how-to-connect-sync-best-practices-changing-default-configuration.md
     - name: Ändra standardkonfigurationen
       href: how-to-connect-sync-change-the-configuration.md
+    - name: Korrigera ändrade standardregler
+      href: how-to-connect-fix-default-rules.md
     - name: Konfigurera katalogtillägg
       href: how-to-connect-sync-feature-directory-extensions.md
     - name: Konfigurera önskad dataplats
@@ -273,6 +275,8 @@ items:
         href: how-to-connect-sync-service-manager-ui-mvsearch.md
   - name: Felsöka
     items:
+    - name: Vad är Azure Active Directory Connect-administratörsagenten?
+      href: whatis-aadc-admin-agent.md
     - name: Vad är ADConnectivityTools PowerShell-modulen?
       href: how-to-connect-adconnectivitytools.md
     - name: Anslutning
@@ -337,9 +341,9 @@ items:
     href: reference-connect-adsynctools.md
   - name: Referens för ADConnectivityTools
     href: reference-connect-adconnectivitytools.md
-ms.openlocfilehash: 613adb5c19c3ca7fa2f47700a0358a51beac98e4
-ms.sourcegitcommit: cdf0e37450044f65c33e07aeb6d115819a2bb822
+ms.openlocfilehash: aac9615fde8547493851ba513156ec860c51c13c
+ms.sourcegitcommit: f24fdd1ab23927c73595c960d8a26a74e1d12f5d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/01/2019
-ms.locfileid: "57193712"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58498289"
