--- a/articles/data-explorer/index.yml
+++ b/articles/data-explorer/index.yml
@@ -1,22 +1,31 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: e4bd3de3dee3219619c0146eb0e455cd9b25c59e
-ms.sourcegitcommit: 11d8ce8cd720a1ec6ca130e118489c6459e04114
+ms.openlocfilehash: 34de58f7a3f9307714ccc4594d9ac92523c55f69
+ms.sourcegitcommit: 0dd053b447e171bc99f3bad89a75ca12cd748e9c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/04/2018
-ms.locfileid: "52840978"
+ms.lasthandoff: 03/26/2019
+ms.locfileid: "58482225"
 documentType: LandingData
 title: Dokumentation om Azure Data Explorer
 metadata:
   title: Dokumentation om Azure Data Explorer – Snabbstarter, självstudier, samt språk- och API-referenser
   description: Azure Data Explorer är en molnplattform för logganalys som är optimerad för ad hoc-stordatafrågor.
-  author: mgblythe
-  ms.author: mblythe
+  author: orspod
+  ms.author: orspodek
   ms.service: data-explorer
   ms.topic: landing-page
-  ms.date: 09/24/2018
+  ms.date: 03/24/2019
 abstract:
-  description: <p>Azure Data Explorer är en snabb och mycket skalbar datautforskningstjänst för logg- och telemetridata. Den hjälper dig att hantera de många dataströmmar som modern programvara skapar, så att du kan samla in, lagra och analysera data. Azure Data Explorer är perfekt för att analysera stora volymer av olikartade data från olika datakällor, till exempel webbplatser, program, IoT-enheter med mera.</p><p>Lär dig hur du använder Azure Data Explorer med våra snabbstarter, självstudier och referensinnehåll.</p>
+  description: <p>Azure Data Explorer är en snabb, fullständigt hanterad dataanalystjänst för realtidsanalys av stora mängder data som strömmar från program, webbplatser, IoT-enheter med mera. Du kan använda Azure Data Explorer för att samla in, lagra och analysera olika data i syfte att övervaka enheter och förbättra produkter, kundupplevelser och åtgärder.</p><p>Lär dig hur du använder Azure Data Explorer med våra snabbstarter, självstudier och referensinnehåll.</p>
+  aside:
+    image:
+      alt: 
+      height: 110
+      src: media/index/video.png
+      width: 250
+    title: Vad är Azure Data Explorer? (19:47)
+    href: https://youtu.be/D_AJk2lAepw
+    width: 250
 sections:
 - title: Snabbstarter på 5 minuter
   items:
