--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -114,6 +114,20 @@ items:
       href: notification-hubs-php-push-notification-tutorial.md
     - name: Skapa meddelandehub – Python
       href: notification-hubs-python-push-notification-tutorial.md
+  - name: Konfigurera inställningar för Platform Notification Service
+    items:
+    - name: Konfigurera inställningar för Apple Push Notification Service
+      href: configure-apple-push-notification-service.md
+    - name: Konfigurera inställningar för Google Firebase Cloud Messaging
+      href: configure-google-firebase-cloud-messaging.md
+    - name: Konfigurera Windows Push Notification Service
+      href: configure-windows-push-notification-service.md
+    - name: Konfigurera Microsoft Push Notification Service
+      href: configure-microsoft-push-notification-service.md
+    - name: Konfigurera Android Device Messaging
+      href: configure-android-device-messaging.md
+    - name: Konfigurera Baidu Cloud Push
+      href: configure-baidu-cloud-push.md
   - name: Registrera med serverdelen för programmet
     href: notification-hubs-ios-aspnet-register-user-from-backend-to-push-notification.md
   - name: Använd tokenbaserad autentisering med Apple-enheter
@@ -150,9 +164,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: a618c3788c501f28d822021b35c925fcf85c7b3c
-ms.sourcegitcommit: 70550d278cda4355adffe9c66d920919448b0c34
+ms.openlocfilehash: a5681a615638fdd14aecb2654e2c6d46f0a7bda4
+ms.sourcegitcommit: 0dd053b447e171bc99f3bad89a75ca12cd748e9c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 03/26/2019
-ms.locfileid: "58438775"
+ms.locfileid: "58486962"
