--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -102,7 +102,7 @@ items:
         href: search-dotnet-mgmt-sdk-migration.md
     - name: Uppgradera REST-API:et
       href: search-api-migration.md
-  - name: Designa index
+  - name: Skapa index
     items:
     - name: Skapa ett grundläggande index
       href: search-what-is-an-index.md
@@ -120,9 +120,7 @@ items:
       items:
       - name: Skapa en förslagsställare
         href: index-add-suggesters.md
-      - name: Exempel på automatiska förslag
-        href: search-autosuggest-example.md
-      - name: Exempel på Komplettera automatiskt
+      - name: Exempel (förslag, automatisk komplettering)
         href: search-autocomplete-tutorial.md
     - name: Synonymer
       items:
@@ -172,7 +170,7 @@ items:
         href: search-indexer-field-mappings.md
       - name: Felsöka vanliga problem
         href: search-indexer-troubleshooting.md
-  - name: AI-utökad indexering (kognitiv sökning)
+  - name: AI-indexering (kognitiv sökning)
     items:
     - name: Bifoga en resurs för Cognitive Services
       href: cognitive-search-attach-cognitive-services.md
@@ -202,9 +200,9 @@ items:
       href: query-simple-syntax.md
     - name: Fullständigt Lucene-frågesyntax
       href: query-lucene-syntax.md
-    - name: Frågeexempel (enkel syntax)
+    - name: Exempel (enkel syntax)
       href: search-query-simple-examples.md
-    - name: Frågeexempel (fullständig Lucene)
+    - name: Exempel (fullständig Lucene)
       href: search-query-lucene-examples.md
   - name: Hantera resultat
     items:
@@ -309,9 +307,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: a126d909d90e70324a0f6038ddd89e4a619d0721
-ms.sourcegitcommit: 70550d278cda4355adffe9c66d920919448b0c34
+ms.openlocfilehash: 74d4c29b7a4c70116531ef242929571eee3e4d90
+ms.sourcegitcommit: f24fdd1ab23927c73595c960d8a26a74e1d12f5d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/26/2019
-ms.locfileid: "58437755"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58500508"
