--- a/articles/active-directory/conditional-access/index.yml
+++ b/articles/active-directory/conditional-access/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: b3e11c58dcc5f5c68e9fe081cc47cf2fa18e9e57
-ms.sourcegitcommit: a65b424bdfa019a42f36f1ce7eee9844e493f293
+ms.openlocfilehash: 296debefb5597af0c82202993443dc38f48f147a
+ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/04/2019
-ms.locfileid: "55697908"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58519569"
 documentType: LandingData
 title: Dokumentation till Azure AD villkorsstyrd åtkomst
 metadata:
@@ -13,14 +13,14 @@ metadata:
   description: Se hur du konfigurerar och testar villkorsstyrd åtkomst för Azure Active Directory.
   services: active-directory
   ms.subservice: conditional-access
-  author: MarkusVi
+  author: MicrosoftGuyJFlo
   manager: daveba
   ms.service: active-directory
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 08/14/2018
-  ms.author: markvi
+  ms.author: joflore
 abstract:
   description: Se hur du klarar balansen mellan säkerhet och produktivitet genom att konfigurera villkorsstyrd åtkomst för Azure AD. Med principer för villkorsstyrd åtkomst kan du ta med åtkomsten till dina molnappar i dina åtkomstbeslut. Du kan till exempel besvara följande frågor inför dina åtkomstbeslut:<ul><li>Vilken är användarens nätverksplats?</li><li>Gjordes åtkomstförsöket från en hanterad enhet?</li><li>Från vilken klientapp gjordes åtkomstförsöket?</li><li>Har ett åtkomstförsök gjorts från en riskabel inloggning?</li></ul>Följande resurser hjälper dig att komma igång snabbt.
   aside:
