--- a/articles/active-directory/devices/index.yml
+++ b/articles/active-directory/devices/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: d04106379f520ca86d28dd346b79355df64dbd32
-ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
+ms.openlocfilehash: 46eb23cf23506b950142068146283345db71a3ea
+ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/28/2019
-ms.locfileid: "55100758"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58520827"
 documentType: LandingData
 title: Dokumentation om Azure AD-enhetshantering
 metadata:
@@ -13,14 +13,14 @@ metadata:
   description: Se hur du konfigurerar och testar enhetshantering för Azure Active Directory.
   services: active-directory
   ms.subservice: devices
-  author: MarkusVi
+  author: MicrosoftGuyJFlo
   manager: daveba
   ms.service: active-directory
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 08/14/2018
-  ms.author: markvi
+  ms.author: joflore
 abstract:
   description: Dina användare får åtkomst till gemensamma tillgångar genom sina enheter. Som IT-administratör vill du nog ha kontroll över de här enheterna så att du kan skydda de gemensamma tillgångarna. På så sätt kan du se till att användarna får åtkomst till resurserna från enheter som uppfyller dina krav för säkerhet och efterlevnad.<br>Enhetshantering utgör även grunden för enhetsbaserad villkorsstyrd åtkomst. Med enhetsbaserad villkorsstyrd åtkomst kan du se till att endast hanterade enheter kan komma åt resurserna i miljön.
 sections:
