--- a/articles/active-directory/identity-protection/index.yml
+++ b/articles/active-directory/identity-protection/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 72839ff812c2e8574f911cf18ea54fcda11fe831
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
+ms.openlocfilehash: 4b98648325eaf434d675bfdc1cdd704870912bc3
+ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55173963"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58517223"
 documentType: LandingData
 title: Azure AD Identity Protection
 metadata:
@@ -13,14 +13,14 @@ metadata:
   description: Se hur du konfigurerar och testar Azure Active Directory Identity Protection.
   services: active-directory
   ms.subservice: identity-protection
-  author: MarkusVi
+  author: MicrosoftGuyJFlo
   manager: daveba
   ms.service: active-directory
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 09/14/2018
-  ms.author: markvi
+  ms.author: joflore
 abstract:
   description: Se hur identifieringen av potentiellt komprometterade identiteter fungerar och hur du implementerar automatiska åtgärder för att ta hand om dem. Azure Active Directory Identity Protection är en funktion i Azure AD Premium P2-versionen som gör att du kan:<ul><li>Identifiera potentiella sårbarheter som påverkar organisationens identiteter</li><li>Konfigurera principer för villkorsstyrd åtkomst för att automatiskt svara på misstänkta åtgärder relaterade till organisationens identiteter</li><li>Undersöka misstänkta incidenter och vidta lämpliga åtgärder för att lösa dem</li></ul><br> Följande resurser hjälper dig att komma igång snabbt.
   aside:
