--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -425,10 +425,14 @@ items:
       href: control-flow-set-variable-activity.md
     - name: Tills-aktivitet
       href: control-flow-until-activity.md
+    - name: Verifieringsaktivitet
+      href: control-flow-validation-activity.md
     - name: Vänteaktivitet
       href: control-flow-wait-activity.md
     - name: Webbaktivitet
       href: control-flow-web-activity.md
+    - name: Webhook-aktivitet
+      href: control-flow-webhook-activity.md
   - name: Dataflödesomvandlingar
     items:
     - name: Aggregera
@@ -587,9 +591,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: ac130165fbad1b43cfef531ac6c3aa69a373d82d
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
+ms.openlocfilehash: 0edb3a8bab3effef2219746714e8ab1f58462fb8
+ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58337043"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58518022"
