--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -90,15 +90,18 @@ items:
         href: how-to-vscode-tools.md
       - name: Träna och distribuera
         href: how-to-vscode-train-deploy.md
-  - name: Förbereda data
+  - name: Arbeta med data
     displayName: data prep, etl, elt, data preparation
     items:
-    - name: Läsa in data
-      href: how-to-load-data.md
-    - name: Omvandla data
-      href: how-to-transform-data.md
-    - name: Skrivdata
-      href: how-to-write-data.md
+    - name: Utforska och förbereda data
+      displayName: data prep, etl, elt, data preparation
+      items:
+      - name: Läsa in data
+        href: how-to-load-data.md
+      - name: Omvandla data
+        href: how-to-transform-data.md
+      - name: Skrivdata
+        href: how-to-write-data.md
   - name: Hämta data i datalagret
     displayName: blob get fileshare access storage
     href: how-to-access-data.md
@@ -198,9 +201,9 @@ items:
   - name: Jämför våra ML-produkter
     href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
     maintainContext: true
-ms.openlocfilehash: 0e40f17725cb56dbc346fffcce0f672f2394ca1d
-ms.sourcegitcommit: 223604d8b6ef20a8c115ff877981ce22ada6155a
+ms.openlocfilehash: 52bc0220f3eb2fa28d344f68fe86310eabeee47c
+ms.sourcegitcommit: cf971fe82e9ee70db9209bb196ddf36614d39d10
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/22/2019
-ms.locfileid: "58359984"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58540388"
