--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 3b778caed10981923d424745d820bfe10c1ce553
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
+ms.openlocfilehash: 903c1153db57f7cb632fc752bb696598902f5aaa
+ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "57903614"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58519722"
 documentType: LandingData
 title: Dokumentation för Azure Media Services
 metadata:
@@ -21,12 +21,7 @@ metadata:
   ms.date: 03/11/2019
   ms.author: juliako
 abstract:
-  description: >-
-    Azure Media Services (AMS) är en molnbaserad plattform
-
-    du kan använda för att skapa lösningar för
-
-    högupplöst videokodning och direktuppspelning i sändningskvalitet som din publik kan spela upp på de flesta populära enheterna. Med AMS v3 kan du även indexera informationen från i video- och ljudfiler med Video Indexer genom att använda analysförinställningar för AMS v3. Använd Video Indexer direkt för att indexera mer detaljerad information.<br/> Mer information om när du bör använda analysförinställningar för Video Indexer eller Media Services finns i <a href="/azure/media-services/video-indexer/compare-video-indexer-with-media-services-presets">jämförelsedokumentet</a>.
+  description: Azure Media Services är en molnbaserad plattform du kan använda för att skapa lösningar för högupplöst videokodning och direktuppspelning i sändningskvalitet som din publik kan spela upp på de flesta populära enheterna. Med Media Services v3 kan du även indexera informationen från dina video- och ljudfiler med Video Indexer genom att använda analysförinställningar för Media Services v3. Använd Video Indexer direkt för att indexera mer detaljerad information.
 sections:
 - items:
   - type: list
@@ -45,7 +40,7 @@ sections:
         src: media/index/AMSIcons-media_analytics.svg
       title: Video Indexer
     - href: /azure/media-services/previous/
-      html: <p>Lär dig att koda, strömma på begäran och sända videor live med Media Services v2.</p>
+      html: <p>Inga nya funktioner läggs till i Media Services v2. Upptäck den senaste Media Services v3-versionen.</p>
       image:
         src: media/index/AMSIcons-media_servicesV2.svg
       title: Azure Media Services v2 (äldre version)
@@ -54,51 +49,3 @@ sections:
       image:
         src: /azure/cdn/media/index/cdn.svg
       title: CDN
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig att koda och strömma med Media Services v3:'
-  - type: list
-    style: icon48
-    items:
-    - image:
-        src: media/index/AMSIcons-encoding.svg
-      text: Strömma filer
-      href: /azure/media-services/latest/stream-files-dotnet-quickstart
-  - type: paragraph
-    text: 'Lär dig att indexera information i videor med Video Indexer:'
-  - type: list
-    style: icon48
-    items:
-    - image:
-        src: media/index/AMSIcons-media_analytics.svg
-      text: Indexera information
-      href: ../cognitive-services/video-indexer/video-indexer-get-started.md?toc=/azure/media-services/video-indexer/toc.json&bc=/azure/media-services/video-indexer/breadcrumb/toc.json
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig mer om att strömma filer på begäran, sända direkt och analysera dina videoklipp med Media Services v3:'
-  - type: list
-    style: icon48
-    items:
-    - image:
-        src: media/index/AMSIcons-encoding.svg
-      text: Ladda upp, koda och strömma videor
-      href: /azure/media-services/latest/stream-files-tutorial-with-api
-    - image:
-        src: media/index/AMSIcons-live.svg
-      text: Sända direkt
-      href: /azure/media-services/latest/stream-live-tutorial-with-api
-    - image:
-        src: media/index/AMSIcons-media_analytics.svg
-      text: Analysera dina videor
-      href: /azure/media-services/latest/analyze-videos-tutorial-with-api
-  - type: paragraph
-    text: 'Lär dig att indexera information i dina videor med Video Indexer-API:et:'
-  - type: list
-    style: icon48
-    items:
-    - image:
-        src: media/index/AMSIcons-media_analytics.svg
-      text: Indexera information
-      href: ../cognitive-services/video-indexer/video-indexer-use-apis.md?toc=/azure/media-services/video-indexer/toc.json&bc=/azure/media-services/video-indexer/breadcrumb/toc.json
