--- a/articles/media-services/video-indexer/index.yml
+++ b/articles/media-services/video-indexer/index.yml
@@ -1,35 +1,58 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7372c3010f31a43dc91a33de08f059a5a60d5ba4
-ms.sourcegitcommit: e69fc381852ce8615ee318b5f77ae7c6123a744c
+ms.openlocfilehash: 45c8f83ce814d5fa8b6d9cde29e59e4628534522
+ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/11/2019
-ms.locfileid: "55988016"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "58522009"
 documentType: LandingData
 title: Dokumentation om Video Indexer
 metadata:
   document_id: 
   title: Dokumentation om Video Indexer | Microsoft Docs
-  meta.description: Learn how about Video Indexer.
+  meta.description: Learn about Video Indexer.
   services: media-services
-  author: Juliako
+  author: juliako
   manager: femila
   ms.service: media-services
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 02/10/2019
+  ms.date: 03/11/2019
   ms.author: juliako
 abstract:
-  description: Video Indexer innehåller AI-mediateknik som underlättar extrahering av insikter från videor.
+  description: Azure Video Indexer är ett molnprogram som bygger på Azure-medieanalys, Azure Search, Cognitive Services (som Ansikts-API, Microsoft Translator, API för visuellt innehåll och Custom Speech Service). Programmet gör det möjligt att extrahera insikter från dina videor med video- och ljudmodeller för Video Indexer.<br/>Mer information om när du bör använda analysförinställningar för Video Indexer eller Media Services finns i <a href="/azure/media-services/video-indexer/compare-video-indexer-with-media-services-presets">jämförelsedokumentet</a>.
 sections:
 - items:
   - type: list
     style: cards
     className: cardsM
-    columns: 3
+    columns: 2
+    items:
+    - href: video-indexer-overview.md
+      html: <p>Video Indexer innehåller AI-mediateknik som underlättar extrahering av insikter från videor.</p>
+      image:
+        src: media/index/AMSIcons-media_servicesV3.svg
+      title: Vad är Video Indexer?
+- title: Snabbstarter på 5 minuter
+  items:
+  - type: paragraph
+    text: 'Logga in på Video Indexer-webbplatsen och ladda upp din första video:'
+  - type: list
+    style: icon48
     items:
     - image:
-        src: 
-      text: Vad är Video Indexer?
-      href: video-indexer-overview.md
+        src: media/index/AMSIcons-media_analytics.svg
+      text: Indexera information
+      href: /azure/media-services/video-indexer/video-indexer-get-started
+- title: Steg för steg-självstudier
+  items:
+  - type: paragraph
+    text: 'Lär dig att indexera information i dina videor med Video Indexer-API:et:'
+  - type: list
+    style: icon48
+    items:
+    - image:
+        src: media/index/AMSIcons-media_analytics.svg
+      text: Indexera information
+      href: /azure/media-services/video-indexer/video-indexer-use-apis
